fix: update breakpoint for site header to align with updated header size

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,4 +1,4 @@
-$break-point-m: 720px;
+$break-point-m: 1080px;
 $backdrop-color: rgba(
   $color: #fff,
   $alpha: 0.7,
